--- a/RandomNumberGuesser/RandomNumberGuesser/Base.lproj/Main.storyboard
+++ b/RandomNumberGuesser/RandomNumberGuesser/Base.lproj/Main.storyboard
@@ -56,14 +56,14 @@
                                 <color key="textColor" red="0.79215988005050508" green="0.46313317973837681" blue="0.093878118831564272" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QmP-4H-qd1">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QmP-4H-qd1">
                                 <rect key="frame" x="250" y="155" width="100" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="1Pb-En-BKe"/>
                                     <constraint firstAttribute="height" constant="30" id="bGe-CZ-P74"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
